<?xml version="1.0" encoding="utf-8"?>



    <com.assignment1.androidjammingsessions.customLayouts.godModeFrameLayout android:id="@+id/standardButtonPanel"

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout

        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <!-- Button KeyPad Column 1 -->

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/sine"
                android:background="@color/Green500"
                android:id="@+id/funcKeySine"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:textColor="@color/white"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/cosine"
                android:background="@color/Green500"
                android:id="@+id/funcKeyCosine"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:textColor="@color/white"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tangent"
                android:background="@color/Green500"
                android:id="@+id/funcKeyTangent"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:textColor="@color/white"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/logarithmic"
                android:background="@color/Green500"
                android:id="@+id/funcKeyLog"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:textColor="@color/white"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/squareRoot"
                android:background="@color/Green500"
                android:id="@+id/funcKeySquareRoot"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:textColor="@color/white"
                />

        </LinearLayout>

        <!-- Button KeyPad Column 2 -->

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/sineInverse"
                android:background="@color/Green500"
                android:id="@+id/funcKeySineInverse"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:textColor="@color/white"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/cosineInverse"
                android:background="@color/Green500"
                android:id="@+id/funcKeyCosineInverse"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:textColor="@color/white"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tangentInverse"
                android:background="@color/Green500"
                android:id="@+id/funcKeyTangentInverse"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:textColor="@color/white"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/exponentialLogarithmic"
                android:background="@color/Green500"
                android:id="@+id/funcKeyLn"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:textColor="@color/white"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/roundOff"
                android:background="@color/Green500"
                android:id="@+id/funcKeyRoundOff"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:textColor="@color/white"
                />

        </LinearLayout>

        <!-- Button KeyPad Column 3 -->

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/sineHyperbolic"
                android:background="@color/Green500"
                android:id="@+id/funcKeySineHyperbolic"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:textColor="@color/white"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/cosineHyperbolic"
                android:background="@color/Green500"
                android:id="@+id/funcKeyCosineHyperbolic"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:textColor="@color/white"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tangentHyperbolic"
                android:background="@color/Green500"
                android:id="@+id/funcKeyTangentHyperbolic"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:textColor="@color/white"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/Degree"
                android:background="@color/Green500"
                android:id="@+id/funcKeyDegrees"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:textColor="@color/white"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/Radians"
                android:background="@color/Amber900"
                android:id="@+id/funcKeyRadians"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:textColor="@color/white"
            />

        </LinearLayout>

    </LinearLayout>

</com.assignment1.androidjammingsessions.customLayouts.godModeFrameLayout>

