<?xml version="1.0" encoding="utf-8"?>


<!--

<string name="viewScreenDiv">x/y</string>



<string name="RCL">RCL</string>
<string name="ENG">ENG</string>
<string name="Rec">Rec</string>
<string name="Pol">Pol</string-->

    <com.assignment1.androidjammingsessions.customLayouts.godModeFrameLayout android:id="@+id/standardButtonPanel"

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">







    <LinearLayout

        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <!-- Button KeyPad Column 1 -->

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/PI"
                android:background="@color/Green500"
                android:id="@+id/funcKeyPi"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:textColor="@color/white"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/Exp"
                android:background="@color/Green500"
                android:id="@+id/funcKeyExponential"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:textColor="@color/white"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/viewScreenAnyRoot"
                android:background="@color/Green500"
                android:id="@+id/funcKeyAnyRoot"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:textColor="@color/white"
                />



            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/viewScreenAnyPower"
                android:background="@color/Green500"
                android:id="@+id/funcKeyAnyPower"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:textColor="@color/white"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/Angles2"
                android:background="@color/Green500"
                android:id="@+id/funcKeyAngles2"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:textColor="@color/white"
                />

        </LinearLayout>

        <!-- Button KeyPad Column 2 -->

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/Permuation"
                android:background="@color/Green500"
                android:id="@+id/funcKeyPermuation"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:textColor="@color/white"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/Combination"
                android:background="@color/Green500"
                android:id="@+id/funcKeyCombination"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:textColor="@color/white"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/FracToDec"
                android:background="@color/Green500"
                android:id="@+id/funcKeyFracToDec"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:textColor="@color/white"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tenPower"
                android:background="@color/Green500"
                android:id="@+id/funcKeyTenPower"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:textColor="@color/white"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/Angles1"
                android:background="@color/Green500"
                android:id="@+id/funcKeyAngle1"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:textColor="@color/white"
                />

        </LinearLayout>

        <!-- Button KeyPad Column 3 -->

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/Rand"
                android:background="@color/Green500"
                android:id="@+id/funcKeyRand"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:textColor="@color/white"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/RCL"
                android:background="@color/Green500"
                android:id="@+id/funcKeyRCL"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:textColor="@color/white"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/ENG"
                android:background="@color/Green500"
                android:id="@+id/funcKeyENG"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:textColor="@color/white"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/Rec"
                android:background="@color/Green500"
                android:id="@+id/funcKeyRec"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:textColor="@color/white"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/Pol"
                android:background="@color/Green500"
                android:id="@+id/funcKeyPol"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:textColor="@color/white"
                />

        </LinearLayout>

    </LinearLayout>

</com.assignment1.androidjammingsessions.customLayouts.godModeFrameLayout>

